EDA/Prácticas/eda/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/marcosesteve/Documents/UNIVERSIDAD/EDA/eda
-d
/Users/marcosesteve/Documents/UNIVERSIDAD/EDA/eda/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/marcosesteve/Documents/UNIVERSIDAD/EDA/eda/librerias/estructurasDeDatos/lineales/LPIColaPrioridad.java
<---- end of javadoc command ---->
Loading source file /Users/marcosesteve/Documents/UNIVERSIDAD/EDA/eda/librerias/estructurasDeDatos/lineales/LPIColaPrioridad.java...
/Users/marcosesteve/Documents/UNIVERSIDAD/EDA/eda/librerias/estructurasDeDatos/lineales/LPIColaPrioridad.java:28: error: not a statement
        e
        ^
/Users/marcosesteve/Documents/UNIVERSIDAD/EDA/eda/librerias/estructurasDeDatos/lineales/LPIColaPrioridad.java:28: error: ';' expected
        e
         ^
/Users/marcosesteve/Documents/UNIVERSIDAD/EDA/eda/librerias/estructurasDeDatos/lineales/LPIColaPrioridad.java:48: error: not a statement
        e
        ^
/Users/marcosesteve/Documents/UNIVERSIDAD/EDA/eda/librerias/estructurasDeDatos/lineales/LPIColaPrioridad.java:48: error: ';' expected
        e
         ^
4 errors
